<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraint"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.woda.budgetcalc.CalculateActivity">
    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fillViewport="true">

        <GridLayout
            android:id="@+id/budget1"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/topnbottom"
            android:columnCount="2"
            android:rowCount="1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/resultsTitle">

            <TextView
                android:id="@+id/monthlyIncome"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:gravity="center"
                android:text="@string/monthly_income" />

            <TextView
                android:id="@+id/monthlyIncomeResult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_row="0"
                android:gravity="center"
                android:textAlignment="inherit"
                android:textSize="14sp" />

        </GridLayout>

        <GridLayout
            android:id="@+id/budget2"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/bottom"
            android:columnCount="2"
            android:rowCount="1"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/budget1">

            <TextView
                android:id="@+id/annualSalaryTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:gravity="center"
                android:text="@string/annual_salary" />

            <TextView
                android:id="@+id/salary_result"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_row="0"
                android:gravity="center"
                android:textAlignment="inherit"
                android:textSize="14sp" />

        </GridLayout>

        <GridLayout
            android:id="@+id/budget3"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/bottom"
            android:columnCount="2"
            android:rowCount="1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/budget4">

            <TextView
                android:id="@+id/annualEmergency"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:gravity="center"
                android:text="@string/emergency_fund" />

            <TextView
                android:id="@+id/emergencyResult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_row="0"
                android:gravity="center"
                android:textAlignment="inherit"
                android:textSize="14sp" />

        </GridLayout>

        <GridLayout
            android:id="@+id/budget4"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/bottom"
            android:columnCount="2"
            android:rowCount="1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/budget2">

            <TextView
                android:id="@+id/annualGeneralSav"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:gravity="center"
                android:text="@string/annual_general_sav" />

            <TextView
                android:id="@+id/savingsResult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_row="0"
                android:gravity="center"
                android:textAlignment="inherit"
                android:textSize="14sp" />

        </GridLayout>

        <GridLayout
            android:id="@+id/budget5"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/bottom"
            android:columnCount="2"
            android:rowCount="1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/budget3">

            <TextView
                android:id="@+id/monthlyExpenses"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:gravity="center"
                android:text="@string/monthly_expenses" />

            <TextView
                android:id="@+id/expensesResult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_row="0"
                android:gravity="center"
                android:textAlignment="inherit"
                android:textSize="14sp" />

        </GridLayout>

        <TextView
            android:id="@+id/resultsTitle"
            android:layout_width="match_parent"
            android:layout_height="30dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="8dp"
            android:text="@string/results"
            android:textAlignment="center"
            android:textSize="24sp"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/chartContainer" />

        <GridLayout
            android:id="@+id/budget6"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="0dp"
            android:background="@drawable/bottom"
            android:columnCount="2"
            android:rowCount="1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/budget5">

            <TextView
                android:id="@+id/savingsLossesTitle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:gravity="center"
                android:text="@string/savigns_losses" />

            <TextView
                android:id="@+id/budgetResult"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_column="1"
                android:layout_columnWeight="1"
                android:layout_gravity="fill"
                android:layout_row="0"
                android:gravity="center"
                android:textAlignment="inherit"
                android:textSize="14sp" />

        </GridLayout>

        <GridLayout
            android:id="@+id/chartContainer"
            android:layout_width="match_parent"
            android:layout_height="220dp"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_marginTop="16dp"
            android:columnCount="2"
            android:rowCount="1"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </GridLayout>
    </android.support.constraint.ConstraintLayout>

</ScrollView>
